package pizzeria.order.domain;public interface FoodRepository {
}
